--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">FYP_AMPS_ANDROID_YISHAN</string>
+    <string name="amps">AMPS</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
