--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -158,4 +158,10 @@
     <string name="image_full_screen">Full-screen image review</string>
     <string name="full_screen_mode">Full-Screen Mode: </string>
     <string name="title_activity_project_details">ProjectDetailsActivity</string>
+    <string name="title_activity_asset_detail">AssetDetailActivity</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_image_review_full_screen">ImageReviewFullScreenActivity</string>
+    <string name="title_activity_asset_upload">AssetUploadActivity</string>
 </resources>
