--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -171,5 +171,6 @@
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_image_review_full_screen">ImageReviewFullScreenActivity</string>
+    <string name="title_activity_video_player_activity">VideoPlayerActivity</string>
     <string name="title_activity_asset_upload">AssetUploadActivity</string>
 </resources>
