--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
     <string name="password">Password</string>
     <string name="button_login">Login</string>
     <string name="button_cancel">Cancel</string>
+    <string name="button_confirm">Confirm</string>
     <string name="title_activity_home">HomeActivity</string>
     <string name="view">View</string>
     <string name="news">NEWS</string>
